helm/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: ollama
spec:
  rules:
  - host: ollama.services.rhoades-brown.local
    http:
      paths:
      - backend:
          service:
            name: ollama
            port:
              number: 11434
        path: /
        pathType: Prefix
